Bug 413671 - LibreOffice Writer is not identified correctly on first startup
Summary: LibreOffice Writer is not identified correctly on first startup
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-31 14:03 UTC by Michail Vourlakos
Modified: 2019-10-31 15:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2019-10-31 14:03:55 UTC
LibreOffice delays to set its StartupWMClass correctly on startup. This is the reason lastactivewindow can not identify correctly the LibreOffice application name and icon
Comment 1 Michail Vourlakos 2019-10-31 15:08:45 UTC
Git commit d5b7694d4d105998e92703d7530ffc74ffa9a1cf by Michail Vourlakos.
Committed on 31/10/2019 at 15:07.
Pushed by mvourlakos into branch 'v0.9'.

update application data after 1500ms from startup

--when an application is tracked from the lastactivewindow
infrastructure it is updating the application name/icon
1500 ms after its first startup in order to fix apps cases
where they update their StartupWMClass a bit delayed

M  +23   -0    app/wm/tracker/lastactivewindow.cpp
M  +8    -0    app/wm/tracker/lastactivewindow.h
M  +2    -2    app/wm/tracker/windowstracker.cpp
M  +1    -1    app/wm/tracker/windowstracker.h

https://commits.kde.org/latte-dock/d5b7694d4d105998e92703d7530ffc74ffa9a1cf
Comment 2 Michail Vourlakos 2019-10-31 15:09:50 UTC
Git commit 189fb00426cc56d604d77f5a20a619a27bea0a54 by Michail Vourlakos.
Committed on 31/10/2019 at 15:09.
Pushed by mvourlakos into branch 'master'.

update application data after 1500ms from startup

--when an application is tracked from the lastactivewindow
infrastructure it is updating the application name/icon
1500 ms after its first startup in order to fix apps cases
where they update their StartupWMClass a bit delayed

M  +23   -0    app/wm/tracker/lastactivewindow.cpp
M  +8    -0    app/wm/tracker/lastactivewindow.h
M  +2    -2    app/wm/tracker/windowstracker.cpp
M  +1    -1    app/wm/tracker/windowstracker.h

https://commits.kde.org/latte-dock/189fb00426cc56d604d77f5a20a619a27bea0a54