app/wm/tracker/lastactivewindow.h
@@ -27,6 +27,7 @@
 // Qt
 #include <QObject>
 #include <QRect>
+#include <QTimer>
 
 namespace Latte {
 class View;
@@ -173,6 +174,13 @@ private:
     QVariant m_winId;
 
     QList<WindowId> m_history;
+
+    //! Some applications delay their application name/icon identification
+    //! such as Libreoffice that updates its StartupWMClass after
+    //! its startup
+    QTimer m_updateApplicationDataTimer;
+    QList<WindowId> m_initializedApplicationData;
+    WindowId m_delayedApplicationDataWid{-1};
 
     TrackedGeneralInfo *m_trackedInfo{nullptr};
     AbstractWindowInterface *m_wm{nullptr};
